--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,84 +1,80 @@
-name: DJango CI # 1. Workflow ati
+name: Django CI  # 1. Workflow atı
 
-# 2. Qashan iske tusedi
+# 2. Trigger (Qashan iske túsedi?)
 on:
   push:
-    branches: [ "main" ]  # main tarmagina push qilinganda
+    branches: [ "main" ]  # main tarmaǵına push qılınǵanda
   pull_request:
-    branches: [ "main" ]  # main tarmagina pull request jiberilgende
+    branches: [ "main" ]  # main-ge pull request jiberilgende
 
-# 3. Jumislaw (Jobs)
-jobs: 
+# 3. Jumıslar (Jobs)
+jobs:
   build-and-test:
-    # Vertuial computer turi (Ubuntu Linux)
+    # Virtual kompyuter túri (Ubuntu Linux)
     runs-on: ubuntu-latest
-
-    # PostgrSQL servisi
+    
+    # PostgreSQL servisi
     services:
-      postgresql:
+      postgres:
         image: postgres:15-alpine
         env:
-        POSTGRES_DB: test_db
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: password
-      ports:
-        - 5432:5432
-      # Baza toliq iske tuskenshe kutiw ushin tekseriw (Health check)
-      options: >-
-        --health-cmd pg_isready
-        --health-interval 10s
-        --health-timeout 5s
-        --health-retries 5
-    
-    # 4. Qademler (Steps)
+          POSTGRES_DB: test_db
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+        ports:
+          - 5432:5432
+        # Baza tolıq iske túskenshe kútiw ushın tekseriw (Health check)
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    # 4. Qádemler (Steps)
     steps:
-    # A) Kodti GitHub repozitoriyinen virual kompyuterden koshirip aliw
+    # A) Kodtı GitHub repozitoriyinen virtual kompyuterge kóshirip alıw
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # B) Python 3.9 di vertual kompyuterge ornatiw
+    # B) Python 3.9 dı virtual kompyuterge ornatıw
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.13'
-    
-    # C) Kitapxanalardi ornatiw
+
+    # C) Kitapxanalardı ornatıw
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest pytest-django psycopg2-binary
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      # Tusindirme:
-      # 1. pip-ti janalaydi.
-      # 2. Test ushin kerek flake8 ham pytest-ti ornatadi.
-      # 3. requirements.txt bar bolsa, ondagi barliq kitapxanalardi ornatadi.
+      # Túsindirme:
+      # 1. pip-ti jańalaydı.
+      # 2. Test ushın kerek flake8 hám pytest-ti ornatadı.
+      # 3. requirements.txt bar bolsa, ondaǵı barlıq kitapxanalardı ornatadı.
 
     # D) Kod stilin tekseriw (Linter)
     - name: Lint with flake8
       run: |
-        # E9, F63, F7, F82 - bular sintaksis qatelikleri (kod islemeydi)
-        # Eger bular shiqsa, process toqtaydi.
-        flake8 . --count --select=E9, F63, F7, F82 --show-source --statistics
+        # E9, F63, F7, F82 - bular sintaksis qátelikleri (kod islemeydi)
+        # Eger bular shıqsa, process toqtaydı.
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 
-        # Qalgan stil qatelikleri (misal, qatar uzinligi 120 belgiden kop bolsa)
-        # --exit-zero: Bul protses ushin process toqtamasin (tek eskertiw)
+        # Qalǵan stil qátelikleri (mısalı, qatar uzınlıǵı 120 belgiden kóp bolsa)
+        # --exit-zero: Bul qátelikler ushın process toqtamasın (tek eskertiw).
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
-    
-    # E) Testlerdi iske tusiriw 
+
+    # E) Testlerdi iske túsiriw
     - name: Run Tests
       env:
         SECRET_KEY: 'test_key'
         DEBUG: 'True'
         ALLOWED_HOSTS: '127.0.0.1,localhost'
-        # Django settings.py ushin kerekli ozgeriwshiler
+        # Django settings.py ushın kerekli ózgeriwshiler
         DB_NAME: 'test_db'
         DB_USER: 'postgres'
         DB_PASSWORD: 'password'
-        DB_HOST: 'localhost'  # GitHub Actions konteyner portin localhostqa baylanistiradi 
+        DB_HOST: 'localhost' # GitHub Actions konteyner portın localhostqa baylanıstıradı
         DB_PORT: '5432'
       run: |
         pytest
-
-    
-
-
